--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ cmake_minimum_required(VERSION 3.14)
 project(HIP35)
 
 add_subdirectory(demo)
-#add_subdirectory(test)
+add_subdirectory(test)
 add_subdirectory(lib)
