--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,11 +5,17 @@ FILE(GLOB HEADERS ${INC_DIR}/*.h ${INC_DIR}/*.hpp)
 
 FILE(GLOB LIB_SRCS ${SRC} ${HEADERS})
 
-
 # Declare the library
 add_library(lib STATIC
     ${SRC}
 )
+
+# Enable compiler warnings
+if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    target_compile_options(lib PRIVATE -Wall -Wextra -pedantic)
+elseif(MSVC)
+    target_compile_options(lib PRIVATE /W4)
+endif()
 
 target_link_libraries(lib
                       ncurses)
