cmake: rename target library

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -8,8 +8,8 @@ add_executable(demo
 
 # Specify here the libraries this program depends on
 target_link_libraries(demo
+    hip35 # library built by this project
     ncurses
-    lib
 )
 
 install(TARGETS demo DESTINATION bin)
