--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,5 +17,7 @@ jobs:
       run: sudo apt install libncurses5 libncursesw5
     - name: build
       run: ./build.sh
+    - name: prepare terminal
+      run: export TERM=xterm-256color
     - name: unit tests
       run: ./build/test/testhip35
