--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,7 +16,7 @@ jobs:
     - name: set terminal environment
       run: echo "TERM=xterm" >> $GITHUB_ENV
     - name: dependencies
-      run: sudo apt install libncurses5 libncursesw5
+      run: sudo apt install cmake libncurses5 libncursesw5
     - name: build
       run: ./build.sh
     - name: unit tests
